# textual-key-recorder

./: README.md  pyproject.toml
textual_key_recorder/: __init__.py  app.py
textual_key_recorder/screens/: main.py
